# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-valkey-module"
version = "0.1.0"
authors = ["ASIMOV Community"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV module."
#documentation = "https://docs.rs/asimov-valkey-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-valkey-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = ["command-line-utilities", "text-processing"]              # TODO
publish = false

[features]
default = ["all", "cli", "std"]
all = ["pretty", "tracing"]
cli = ["asimov-module/cli", "std", "dep:clap", "dep:clientele"]
std = ["asimov-module/std", "clap?/std", "clientele?/std"]
unstable = []

# Optional features:
pretty = []
tracing = ["asimov-module/tracing", "clientele?/tracing"]

[dependencies]
asimov-module = { version = "25.0.0-dev.21", default-features = false }

# Optional integrations:
clap = { version = "4.5", default-features = false, features = [
  "std",
], optional = true }
clientele = { version = "0.3.8", default-features = false, features = [
  "clap",
  "std",
], optional = true }
redis = "0.32"

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-valkey-cataloger"
path = "src/cataloger/main.rs"
required-features = ["cli"]
